# TuiCity

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RULES.md  TODO.md  test.rs
assets/music/: 01_civic_sunrise_theme.mid  02_riverfront_reflections.mid  LMMS_SURGE_WORKFLOW.md  README.md  manifest.json
assets/prompts/: advisor.txt  alert.txt  city_name.txt  newspaper.txt  newspaper_article.txt  rules_summary.txt
plans/: async-llm-loading.md
src/: audio.rs  game_info.rs  main.rs  test_mod.rs  test_rat_render.rs  test_rat_widget.rs  test_rat_widget2.rs  test_rat_widget3.rs  test_rat_widget4.rs  test_rat_widget_slider.rs
src/app/: camera.rs  config.rs  input.rs  line_drag.rs  mod.rs  rect_drag.rs  save.rs
src/app/screens/: confirm_dialog.rs  ingame.rs  ingame_budget.rs  ingame_interaction.rs  ingame_menu.rs  ingame_news.rs  ingame_widgets.rs  llm_setup.rs  load_city.rs  mod.rs  new_city.rs  settings.rs  start.rs  theme_settings.rs
src/core/: engine.rs  mod.rs  tests.rs  tool.rs  tool_placer.rs
src/core/map/: gen.rs  mod.rs  tile.rs
src/core/sim/: constants.rs  economy.rs  growth.rs  mod.rs  system.rs  util.rs
src/core/sim/systems/: disasters.rs  finance.rs  fire.rs  growth_system.rs  history.rs  (+6 more)
src/textgen/: backend_llamacpp.rs  backend_static.rs  context.rs  download.rs  generator.rs  integration_tests.rs  mod.rs  models.rs  prompt.rs  types.rs
src/ui/: mod.rs  painter.rs  pixel.rs  runtime.rs  theme.rs  view.rs
src/ui/frontends/: mod.rs
src/ui/game/: budget.rs  disasters.rs  infopanel.rs  inspect_popup.rs  map_view.rs  minimap.rs  mod.rs  news_ticker.rs  overlay_legend.rs  power_popup.rs  statistics.rs  statusbar.rs  toolbar.rs
src/ui/screens/: common.rs  llm_setup.rs  load_city.rs  mod.rs  new_city.rs  settings.rs  start.rs  theme_settings.rs
tools/: generate_music_pack.py
(+11 files in other folders)
