[package]
name = "tuicity2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tuicity2"
path = "src/main.rs"

[dependencies]
ratatui    = { version = "0.30", features = ["crossterm"] }
crossterm  = "0.29"
rand       = "0.8"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tui-popup = "0.7.2"
rat-widget = "3.2.1"
rat-focus = "2.1.1"
rat-event = "2.1.0"
