[package]
name = "tuicity2000"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tc2000"
path = "src/main.rs"

[dependencies]
ratatui    = { version = "0.30", features = ["crossterm"] }
crossterm  = "0.29"
rand       = "0.8"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tui-big-text = "0.8.2"
rodio = { version = "0.17.3", default-features = false, features = ["symphonia-mp3"] }
