[package]
name = "tuicity2000"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tc2000"
path = "src/main.rs"

[dependencies]
ratatui    = { version = "0.30", features = ["crossterm"] }
crossterm  = "0.29"
rand       = "0.8"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tui-big-text = "0.8.2"
rodio = { version = "0.17.3", default-features = false, features = ["symphonia-mp3"] }
winit       = "0.29"
softbuffer  = "0.4"
font8x8     = "0.3"
log         = "0.4"
simplelog   = "0.12"


# LLM integration (optional) — llama.cpp backend
llama-cpp-2 = { version = "0.1", optional = true }
hf-hub      = { version = "0.5", optional = true }

[features]
default = ["llm-cuda"]
llm     = ["llama-cpp-2", "hf-hub"]
llm-cuda = ["llm", "llama-cpp-2/cuda"]
llm-vulkan = ["llm", "llama-cpp-2/vulkan"]
llm-rocm = ["llm", "llama-cpp-2/rocm"]
llm-metal = ["llm", "llama-cpp-2/metal"]
